[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/PersonaggioScene/Personaggio.tscn" type="PackedScene" id=1]
[ext_resource path="res://documentazione/Art/Combat Backgrounds/Roots0.png" type="Texture" id=2]
[ext_resource path="res://scenes/CombatScene/Combattimento.gd" type="Script" id=4]

[node name="Combattimento" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 2 )
stretch_mode = 1

[node name="MainContainer" type="HBoxContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0

[node name="ContainerAlleato" type="VBoxContainer" parent="MainContainer"]
margin_right = 958.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CenterContainer" type="CenterContainer" parent="MainContainer/ContainerAlleato"]
margin_right = 958.0
margin_bottom = 1056.0
rect_min_size = Vector2( 64, 64 )
rect_pivot_offset = Vector2( 1961, 1241 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Alleato" parent="MainContainer/ContainerAlleato/CenterContainer" instance=ExtResource( 1 )]
unique_name_in_owner = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 447.0
margin_top = 496.0
margin_right = 511.0
margin_bottom = 560.0
rect_pivot_offset = Vector2( 1729, 665 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AttackContainer" type="HBoxContainer" parent="MainContainer/ContainerAlleato"]
margin_top = 1060.0
margin_right = 958.0
margin_bottom = 1080.0
rect_pivot_offset = Vector2( 1175, 254 )
size_flags_horizontal = 3
alignment = 1

[node name="Headbutt" type="Button" parent="MainContainer/ContainerAlleato/AttackContainer"]
margin_left = 260.0
margin_right = 331.0
margin_bottom = 20.0
text = "Headbutt"

[node name="Hatchet" type="Button" parent="MainContainer/ContainerAlleato/AttackContainer"]
margin_left = 335.0
margin_right = 397.0
margin_bottom = 20.0
text = "Hatchet"

[node name="2H_Axe" type="Button" parent="MainContainer/ContainerAlleato/AttackContainer"]
margin_left = 401.0
margin_right = 520.0
margin_bottom = 20.0
text = "Two-Headed Axe"

[node name="Sword" type="Button" parent="MainContainer/ContainerAlleato/AttackContainer"]
margin_left = 524.0
margin_right = 574.0
margin_bottom = 20.0
text = "Sword"

[node name="Hammer" type="Button" parent="MainContainer/ContainerAlleato/AttackContainer"]
margin_left = 578.0
margin_right = 646.0
margin_bottom = 20.0
text = "Hammer"

[node name="Spear" type="Button" parent="MainContainer/ContainerAlleato/AttackContainer"]
margin_left = 650.0
margin_right = 697.0
margin_bottom = 20.0
text = "Spear"

[node name="ContainerNemico" type="CenterContainer" parent="MainContainer"]
margin_left = 962.0
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer/ContainerNemico"]
margin_left = 447.0
margin_top = 508.0
margin_right = 511.0
margin_bottom = 572.0
custom_constants/separation = 60

[node name="Nemico" parent="MainContainer/ContainerNemico/VBoxContainer" instance=ExtResource( 1 )]
unique_name_in_owner = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 64.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="MainContainer/ContainerAlleato/AttackContainer/Headbutt" to="." method="_on_Headbutt_pressed"]
[connection signal="pressed" from="MainContainer/ContainerAlleato/AttackContainer/Hatchet" to="." method="_on_Hatchet_pressed"]
[connection signal="pressed" from="MainContainer/ContainerAlleato/AttackContainer/2H_Axe" to="." method="_on_2H_Axe_pressed"]
[connection signal="pressed" from="MainContainer/ContainerAlleato/AttackContainer/Sword" to="." method="_on_Sword_pressed"]
[connection signal="pressed" from="MainContainer/ContainerAlleato/AttackContainer/Hammer" to="." method="_on_Hammer_pressed"]
[connection signal="pressed" from="MainContainer/ContainerAlleato/AttackContainer/Spear" to="." method="_on_Spear_pressed"]
